--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     </head>
     <body>
         <header>
-            <nav></nav>
+        <img src="/myPic.PNG" alt="my photo will render here">
         </header>
         <section>
-            <h1>Welcome to my website</h1>
-            <h3>This is my website</h3>
+            <h1>Ashenafi Gemechu</h1>
+            <div>
+                <ul>
+                    <li>
+                        W1D1 - This is home page
+                    </li>
+                    <li>
+                        W1D2 - About me
+                    </li>
+                    <li>
+                        W1D3 - Recipe
+                    </li><li>
+                        W1D4 - Movie review
+                    </li>
+                    <li>
+                        W1D5 - MP3 Library
+                    </li>
+                    <li>
+                        W1D6 - Movie Review PHP
+                    </li>
+                </ul>
+            </div>
+            
         </section>
         <footer>
             <div>&copy 2020- A Gemechu</div>
