--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-        <img src="myPic.PNG" alt="my photo will render here">
+        <img src="/myPic.PNG" alt="my photo will render here">
         </header>
         <section>
             <h1>Ashenafi Gemechu</h1>
@@ -34,6 +34,7 @@
         </section>
         <footer>
             <div>&copy 2020- A Gemechu</div>
+           <div><a href = "https://validator.w3.org/check/referer"><img src="valid-xhtml.png" alt="validator"></a></div> 
         </footer>
     </body>
 </html>
