--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>My website</title>
     </head>
     <body>
         <header>
-        <img src="/myPic.PNG" alt="my photo will render here">
+        <img src="myPic.PNG" alt="my photo will render here">
         </header>
         <section>
             <h1>Ashenafi Gemechu</h1>
@@ -33,7 +33,7 @@
             
         </section>
         <footer>
-            <div>&copy 2020- A Gemechu</div>
+            <div>&copy; 2020- A Gemechu</div>
            <div><a href = "https://validator.w3.org/check/referer"><img src="valid-xhtml.png" alt="validator"></a></div> 
         </footer>
     </body>
