--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-        <img src="myPic.PNG" alt="my photo will render here">
+        <img src="myPic.png" alt="my photo will render here">
         </header>
         <section>
             <h1>Ashenafi Gemechu</h1>
