--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
             <div>
                 <ul>
                     <li>
-                        W1D1 - This is home page
+                        <W1D1 - This is home page>
                     </li>
                     <li>
-                        W1D2 - About me
+                        <a href="about.html"> W1D2 - About me</a>>
+                       
                     </li>
                     <li>
-                        W1D3 - Recipe
+                        <a href="pie.html"> W1D3 - Recipe</a>>
+                        
                     </li><li>
                         W1D4 - Movie review
                     </li>
