--- a/about.html
+++ b/about.html
@@ -46,7 +46,8 @@
     </section>
     <footer>
         <div>&copy; 2020- A Gemechu</div>
-        <div><a href = "https://validator.w3.org/check/referer"><img src="valid-xhtml.png" alt="validator"></a></div> 
+        <p><a href="https://validator.w3.org/check?uri=referer"><img src="./images/w3c-html.png" alt="html validator"></a> 
+            <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="./images/w3c-css.png" alt="css validator"></a></p> 
     </footer>
 </body>
 </html>
