--- a/pie.html
+++ b/pie.html
@@ -98,7 +98,7 @@
     </section> 
     <footer>
        <p><a href="https://validator.w3.org/check?uri=referer"><img src="./images/w3c-html.png" alt="html validator"></a> 
-        <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="./images/w3c-css.png" alt="css validator"></a></p> 
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="./images/w3c-css.png" alt="css validator"></a></p> 
        <pre>Copyright &copy; 2012 Granny's Pies |
         A Granny's Pies Production     |
         All rights reserved            |</pre>
