fixing for validator

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <li>CS 546 - Moder Web Application</li>
         </ul>
     </section>
-    <sectio>
+    <section>
         <h2>MY Favorite Movies</h2>
         <p>(I acctually don't watch movies and barely remember them, so... here goies!)</p>
         <ol>
@@ -28,10 +28,10 @@
             <li value="1">Person of Interest(<a href="https://www.imdb.com/title/tt1839578/">IMDB</a>)</li>
             
         </ol>
-    </sectio>
+    </section>
     <section>
         <h2>My Moods</h2>
-        Sad: <img src="./images/sad image.jfif"> Happy: <img src="./images/happy.jpg">
+        Sad: <img src="./images/sad image.jpg"> Happy: <img src="./images/happy.jpg">
     </section>
     <section>
         <h2>Fun Facts About My Neighbors</h2>
