fix for validator

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     </section>
     <section>
         <h2>My Moods</h2>
-        Sad: <img src="./images/sad image.jpg"> Happy: <img src="./images/happy.jpg">
+        Sad: <img src="./images/sad_image.jpg" alt="my sad image represented like"> Happy: <img src="./images/happy.jpg" alt="my happy image">
     </section>
     <section>
         <h2>Fun Facts About My Neighbors</h2>
