--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
             <div>
                 <ul>
                     <li>
-                        <W1D1 - This is home page>
+                        W1D1 - This is home page
                     </li>
                     <li>
                         <a href="about.html"> W1D2 - About me</a>>
-                       
                     </li>
                     <li>
                         <a href="pie.html"> W1D3 - Recipe</a>>
