--- a/pie.html
+++ b/pie.html
@@ -94,7 +94,7 @@
             LINKS
         </h1>
         <p><a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a></p>
-        <p><a href="">Home</a></p>
+        <p><a href="index.html">Home</a></p>
     </section> 
     <footer>
        <p><a href="https://validator.w3.org/check?uri=referer"><img src="./images/w3c-html.png" alt="html validator"></a> 
