--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="pie.html"> W1D3 - Recipe</a>>
                         
                     </li><li>
-                        W1D4 - Movie review
+                        <a href="tmnt.html">W1D4 - Movie review</a>
                     </li>
                     <li>
                         W1D5 - MP3 Library
