--- a/tmnt.html
+++ b/tmnt.html
@@ -172,7 +172,7 @@
     </main>
 
     <footer>
-        <a href="https://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5" /></a> <br />
+        <a href="https://validator.w3.org/check?uri=referer"><img src="images/w3c-html.png" alt="Valid HTML5" /></a> <br />
         <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS" /></a>
     </footer>
 </body>
