week 1 day 4 assignments

--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
                     <li>
                         <a href="pie.html"> W1D3 - Recipe</a>>
                         
-                    </li><li>
+                    </li>
+                    <li>
                         <a href="tmnt.html">W1D4 - Movie review</a>
+                    </li>
+                    <li>
+                        <a href="emailForm.html">W1D4 - Email Form</a>
+                    </li>
+                    <li>
+                        <a href="ProductForm.html">W1D4 - Product Form</a>
                     </li>
                     <li>
                         W1D5 - MP3 Library
