--- a/index.html
+++ b/index.html
@@ -1,49 +1,12 @@
 <!DOCTYPE html>
-<html lang = "en">
-    <head>
-        <title>My website</title>
-    </head>
-    <body>
-        <header>
-        <img src="myPic.PNG" alt="my photo will render here">
-        </header>
-        <section>
-            <h1>Ashenafi Gemechu</h1>
-            <div>
-                <ul>
-                    <li>
-                        W1D1 - This is home page
-                    </li>
-                    <li>
-                        <a href="about.html"> W1D2 - About me</a>>
-                    </li>
-                    <li>
-                        <a href="pie.html"> W1D3 - Recipe</a>>
-                        
-                    </li>
-                    <li>
-                        <a href="tmnt.html">W1D4 - Movie review</a>
-                    </li>
-                    <li>
-                        <a href="emailForm.html">W1D4 - Email Form</a>
-                    </li>
-                    <li>
-                        <a href="ProductForm.html">W1D4 - Product Form</a>
-                    </li>
-                    <li>
-                        W1D5 - MP3 Library
-                    </li>
-                    <li>
-                        W1D6 - Movie Review PHP
-                    </li>
-                </ul>
-            </div>
-            
-        </section>
-        <footer>
-            <div>&copy; 2020- A Gemechu</div>
-           <div><a href = "https://validator.w3.org/check/referer"><img src="valid-xhtml.png" alt="validator"></a></div> 
-        </footer>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+   
+    <script src="assignment9.js"></script>
+</body>
 </html>
-
