--- a/pie.html
+++ b/pie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="recipe.css" rel="stylesheet">
+    <link href="./css/recipe.css" rel="stylesheet">
     <link rel="icon" href="./images/pie_icon.gif" type="image/gif">
 </head>
 <body>
