--- a/tmnt.html
+++ b/tmnt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="movies.css">
+    <link rel="stylesheet" href="./css/movies.css">
     <!-- <link rel="icon" href="./images/" type="image/gif"> -->
     <title>Document</title>
 </head>
